Initial version of class loading code.